@@ -1,6 +1,7 @@
 5.14.2openmpi
 	- fixed build error occurred if VT is configured with exec tracing
 	  enabled, but with memory allocation tracing disabled
+	- fixed infinite recursion in the realloc wrapper initiated by dlerror
 	- fixed assertion error occurred when MPI_Initialized is the very first
 	  event to be recorded
 	- fixed potential stack underflow when tracing only MPI events of a
